--- a/css/estilo.css
+++ b/css/estilo.css
@@ -302,4 +302,30 @@ span {
  background: #00420c;
  color:#69c;
  }
+/* termos técnicos*/
+
+.termo table, .termo tr, .termo th, .termo td {
+	
+	border-collapse: collapse;
+    padding: 8px 10px;
+}
+.termo table tr:first-child {
+	background-color: #353535;
+    color: #FFF;
+}
+.termo table tr:nth-child(even) {
+    background-color: #DFDFDF;
+}
+.termo table th{
+    text-align: left;
+}
+.termo th {
+    width: 220px;
+}
+.termo {
+    font-size: 14.5px;
+   
+}
+
+
 
