--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,14 @@
-﻿html,body { 
-	margin: 0; 
-	padding: 0; 
-	min-height: 100%; 
-	font-size: 1em; 
-	line-height: 1.4em; 
+﻿html,body {
+	margin: 0;
+	padding: 0;
+	min-height: 100%;
+	font-size: 1em;
+	line-height: 1.4em;
 	font-family: 'SegoeUI', Arial, Helvetica !important;
 	}
 p, a {
 	color: #333333;
-	font-size: 14px;
+	/* font-size: 14px; */
 }
 p:hover {
 	cursor: text;
@@ -76,18 +76,15 @@ footer{
 
 #menu, #menu ul {
 
- list-style: none;
- font: bold 12px Verdana, Arial, Helvetica, sans-serif;
+list-style: none;
+
+/* font: bold 12px Verdana, Arial, Helvetica, sans-serif; */
+
 /* padding:  13px;
  margin: -13px;*/
-  
- }
-#menu {
-/* 	border-bottom:3px solid #228B22; */
-	height: 26.6px;
-	background-color:#FFFAFA;
-	width: 100%;
+
 }
+#menu {/* border-bottom:3px solid #228B22; *//* height: 26.6px; */background-color:#FFFAFA;width: 100%;height: 3.1em;}
 
 *{margin: 0;}
 
@@ -101,11 +98,11 @@ a:hover {
 	color: #00F;
 }
 .menu{
-	list-style:none; 
-	/*border-top:1px solid #c0c0c0;*/
-	float:left; 
-	margin-left:8%;
-	margin-right:8%;
+	list-style:none;
+	/* border-top:1px solid #c0c0c0; */
+	/* float:left; */
+	/* margin-left:8%; */
+	/* margin-right:8%; */
 }
 #menu li {
  float: left;
@@ -290,16 +287,16 @@ span {
 }
 
 
-#menu a { 
+#menu a {
  display: block;
- width: 16em;
- height: 2em;
- line-height: 2;
+ width: 10em;
+ height: 3em;
+ line-height: 3;
  text-align: center;
  text-decoration: none;
  background-color: #00420c; /* IE precisa desta declaração */
  color: #fff;
- border: 1px solid #ccc; 
+ border: 1px solid #ccc;
  border-width: 0 1px 1px;
  } 
 #menu a:hover {
