vistoria no código

--- a/css/estilo_form_area_admin.css
+++ b/css/estilo_form_area_admin.css
@@ -24,9 +24,9 @@ img{
 :invalid {
   border-color: #e88;
   -webkit-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
-  -moz-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
-  -o-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
-  -ms-box-shadow: 0 0 5px rbba(255, 0, 0, .8);
+  -moz-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
+  -o-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
+  -ms-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
   box-shadow:0 0 5px rgba(255, 0, 0, .8);
 }
 
@@ -69,12 +69,11 @@ input[type=submit] {
 
 table {
   width:50%;
-  margin: 20px auto; 
-  border;
+  margin: 20px auto;
 }
 
 table, td, th {
-    border: 1px solid green; 
+    border: 1px solid green;
 }
 
 th {
