--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     font-family: arial;
     font-size: 20px;
     text-transform: uppercase;
-    font-weight: 100%;
+    /*font-weight: 100px;*/
     border: none;
     padding: 10px;
     cursor: pointer;
