--- a/css/style_cadastro.css
+++ b/css/style_cadastro.css
@@ -84,7 +84,7 @@ element.style{
     transition: box-shadow 0.45s,border-color 0.45s ease-in-out;
 }*/
 label{
-  display: inline block;
+  display: inline;
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: bolder;
