--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,6 @@
 
 p, a {
     color: #333333;
-    /* font-size: 14px; */
 }
 
 p:hover {
@@ -18,8 +17,9 @@ p:hover {
 
 .banner {
 
-    padding-left: 37%;
+    padding-left: 14%;
     margin: 0 auto;
+
 }
 
 #logo {
@@ -79,30 +79,13 @@ footer {
 }
 
 .t1 {
-    margin-top: 80px;
+    margin-top: 30px;
     margin-left: 0;
     font-size: 26px;
 }
 
-#menu, #menu ul {
-
-    list-style: none;
-
-    /* font: bold 12px Verdana, Arial, Helvetica, sans-serif; */
-
-    /* padding:  13px;
-     margin: -13px;*/
-
-}
-
-#menu { /* border-bottom:3px solid #228B22; *//* height: 26.6px; */
-    background-color: #FFFAFA;
-    width: 100%;
-    height: 3.1em;
-}
-
 * {
-    margin: 0;
+    margin: 0px;
 }
 
 body {
@@ -117,24 +100,47 @@ a:hover {
     color: #00F;
 }
 
+/*Estilos menu*/
+
 .menu {
+    width: 100%;
     list-style: none;
-    /* border-top:1px solid #c0c0c0; */
-    /* float:left; */
-    /* margin-left:8%; */
-    /* margin-right:8%; */
+}
+
+#menu, #menu ul {
+
+    list-style: none;
+    width: 100%;
+    padding: 0px;
+
 }
 
 #menu li {
     float: left;
+    width: 134px;
 }
 
 #menu li ul {
+
     position: absolute;
-    top: 11.5em;
+    top: 147px;
     left: -0.8em;
-    width: 2em;
-    /* margin: -0.1;*/
+    width: 19%;
+    z-index: 5;
+
+}
+#menu a {
+
+    display: block;
+    width: 11.9em;
+    height: 3em;
+    line-height: 3;
+    text-align: center;
+    text-decoration: none;
+    background-color: #00420c; /* IE precisa desta declaração */
+    color: #fff;
+    /* border: 1px solid #ccc; */
+    border-width: 0 1px 1px;
 }
 
 #menu li:hover ul ul, #menu li.over ul ul {
@@ -144,6 +150,14 @@ a:hover {
 #menu li:hover ul, #menu li li:hover ul, #menu li.over ul, #menu li li.over ul {
     display: block;
 }
+
+#menu a:hover {
+    text-decoration: none;
+    background: #00420c;
+    color: #69c;
+}
+
+/*---------------------------------------------------------*/
 
 .video {
     width: 360px;
@@ -269,7 +283,7 @@ span {
 .login a {
     color: white;
     float: right;
-    margin-right: 20%;
+    margin-right: 28%;
 }
 
 .login a:hover {
@@ -334,25 +348,6 @@ span {
 
 .error {
     color: #FF0000;
-}
-
-#menu a {
-    display: block;
-    width: 10em;
-    height: 3em;
-    line-height: 3;
-    text-align: center;
-    text-decoration: none;
-    background-color: #00420c; /* IE precisa desta declaração */
-    color: #fff;
-    border: 1px solid #ccc;
-    border-width: 0 1px 1px;
-}
-
-#menu a:hover {
-    text-decoration: none;
-    background: #00420c;
-    color: #69c;
 }
 
 /*estilo do mapa.php*/
