--- a/css/estilo_form_area_admin.css
+++ b/css/estilo_form_area_admin.css
@@ -1,82 +1,61 @@
-html,body{
-    margin: 0px;
-    width: 100%;
-    height: 100%;
+.form_area_adm {
+    width: 50%;
 }
 
-input {
-  display:block;
+.img_are_adm {
+    width: 15px;
+    height: 15px;
 }
 
-form{
-  width: 50%;
+.form_area_adm {
+    margin: 20px auto;
 }
 
-label.required{
-  color: red;
-}
-img{
-  width: 15px;
-  height: 15px;
-}
-
-
-:invalid {
-  border-color: #e88;
-  -webkit-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
-  -moz-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
-  -o-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
-  -ms-box-shadow: 0 0 5px rgba(255, 0, 0, .8);
-  box-shadow:0 0 5px rgba(255, 0, 0, .8);
-}
-
-:required {
-  border-color: #88a;
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 255, .5);
-  -moz-box-shadow: 0 0 5px rgba(0, 0, 255, .5);
-  -o-box-shadow: 0 0 5px rgba(0, 0, 255, .5);
-  -ms-box-shadow: 0 0 5px rgba(0, 0, 255, .5);
-  box-shadow: 0 0 5px rgba(0, 0, 255, .5);
+.input_area_adm {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border: 1px solid #ccc;
+    font-size: 17px;
+    width: 99%;
+    min-height: 30px;
+    display: block;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    outline: none;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
 }
 
-form {
-  width:300px;
-  margin: 20px auto;
+.table_form {
+    width: 50%;
+    margin: 20px auto;
 }
 
-input {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border:1px solid #ccc;
-  font-size:20px;
-  width:300px;
-  min-height:30px;
-  display:block;
-  margin-bottom:15px;
-  margin-top:5px;
-  outline: none;
-
-  -webkit-border-radius:5px;
-  -moz-border-radius:5px;
-  -o-border-radius:5px;
-  -ms-border-radius:5px;
-  border-radius:5px;
-}
-
-input[type=submit] {
-  background:none;
-  padding:10px;
-}
-
-table {
-  width:50%;
-  margin: 20px auto;
-}
-
-table, td, th {
-    border: 1px solid green;
-}
-
-th {
+table_form, th {
     background-color: green;
     color: white;
+}
+
+.control_admin {
+    display: block;
+    width: 97%;
+    padding: 5px 5px;
+    font-size: 16px;
+    color: dimgrey;
+    background-color: #FFFFFF;
+    border: 1px solid #B5B5B5;
+    border-radius: 5px;
+}
+
+.h3_area_adm {
+    text-align: center;
+}
+
+.voc_area_adm {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-align: center;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
