--- a/css/style_cadastro.css
+++ b/css/style_cadastro.css
@@ -40,7 +40,6 @@ legend{
 }
 .control{
     display: block;
-    /*width: 50%;*/
     height: 30px;
     padding: 5px 15px;
     font-size: 16px;
@@ -50,11 +49,13 @@ legend{
     border-radius: 5px;
     
 }
+
 input, select{
     color: inherit;
     font: inherit;
     margin: 0;
 }
+
 .data select{
     display: inline;
     width: auto;
@@ -64,25 +65,27 @@ element.style{
     min-width: 280px;
     width: 40%;
 }
-/*input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
-    -webkit-appearance: none;
-    -webkit-border-radius: 0px;
-    background-color: #fff;
-    font-family: inherit;
-    border: 1px solid #ccc;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-    color: rgba(0,0,0,0.75);
-    display: block;
-    font-size: 0.875rem;
-    margin: 0 0 1rem 0;
-    padding: 0.5rem;
-    height: 2.3125rem;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    transition: box-shadow 0.45s,border-color 0.45s ease-in-out;
-}*/
+
+/*input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {*/
+    /*-webkit-appearance: none;*/
+    /*-webkit-border-radius: 0px;*/
+    /*background-color: #fff;*/
+    /*font-family: inherit;*/
+    /*border: 1px solid #ccc;*/
+    /*box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);*/
+    /*color: rgba(0,0,0,0.75);*/
+    /*display: block;*/
+    /*font-size: 0.875rem;*/
+    /*margin: 0 0 1rem 0;*/
+    /*padding: 0.5rem;*/
+    /*height: 2.3125rem;*/
+    /*width: 100%;*/
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+    /*transition: box-shadow 0.45s,border-color 0.45s ease-in-out;*/
+/*}*/
+
 label{
   display: inline;
   max-width: 100%;
@@ -131,9 +134,7 @@ body{
     position: relative;
     cursor: default;
 }
-html, body{
-    /*font-size: 100%;*/
-}
+
 .submit {
     cursor: pointer;
 }
