--- a/css/estilo.css
+++ b/css/estilo.css
@@ -117,7 +117,7 @@ a:hover {
 
 #menu li {
     float: left;
-    width: 134px;
+    width: 10%;
 }
 
 #menu li ul {
@@ -129,10 +129,11 @@ a:hover {
     z-index: 5;
 
 }
+
 #menu a {
 
     display: block;
-    width: 11.9em;
+    width: 100%;
     height: 3em;
     line-height: 3;
     text-align: center;
